# interaction-devkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: codecov.yml
.github/workflow/: code-quality-master.yaml  code-quality-pr.yaml
.github/workflows/: code-quality-pr.yaml  publish.yaml  test.yaml
interaction/: _version.py
interaction-devkit/: __init__.py
interaction/dataset/: __init__.py  map_api.py  track_api.py  utils.py
interaction/dataset/maps/: __init__.py  elements.py  projector.py  speed_limit.py  typing.py  utils.py
interaction/dataset/tests/: __init__.py  test_map_api.py  test_track_components.py
interaction/dataset/tracks/: container.py  typing.py
